fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  overflow-x: hidden;
+  width: 100%;
 }
 
 code {
